--- a/index.html
+++ b/index.html
@@ -1188,14 +1188,14 @@
                     </div>
                 </div> -->
 
-                <div class='row vspace-top'>
+                <!-- <div class='row vspace-top'> -->
                     <!-- <div class="col-sm-3">
                         <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
                             <source src="metasdf/img/metasdf_steps_comp.mp4" type="video/mp4">
                         </video>
                     </div> -->
 
-                    <div class="col">
+                    <!-- <div class="col">
                         <div class='paper-title'>
                             Multiple-Instance Learning from Similar and Dissimilar Bags
                         </div>
@@ -1209,7 +1209,7 @@
                             <a href="https://personal.ntu.edu.sg/boan/papers/KDD21_Multiinstance.pdf" target="_blank">[Paper]</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
 
