--- a/index.html
+++ b/index.html
@@ -1616,8 +1616,8 @@
                             Qiang Hu
                         </div>
                         <div class='paper-desc'>
-                            Now PhD student at SUNY Buffalo <br>
-                            Undergraduate student at SUSTech
+                            Undergraduate student at SUSTech (2025) <br>
+                            Now PhD student at SUNY Buffalo 
                         </div>
                     </div>
 
@@ -1626,8 +1626,8 @@
                              Xuanning Zhou
                         </div>
                         <div class='paper-desc'>
-                            Now Mphil at CUHK(SZ)<br>
-                            Research Intern (2024-2025) 
+                            Research Intern (2024-2025) <br>
+                            Now Mphil at CUHK(SZ)
                         </div>
                     </div>
 
