--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
-                        February 2025
+                        May 2025
                     </div>
                     <div class="col">
                         Three papers are accepted by ICML 2025. Congratulations to Shuoyuan and Hao Zeng!
@@ -157,10 +157,10 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
-                        May 2024
+                        January 2024
                     </div>
                     <div class="col">
-                        Four papers are accepted by ICLR 2025. Congratulations to Kangdao, Wenyu, and Hengxiang!
+                        Three papers are accepted by ICLR 2025. Congratulations to Wenyu, and Hengxiang!
                     </div>
                 </div>
                 
@@ -1328,7 +1328,7 @@
                             Hanjie Yang
                         </div>
                         <div class='paper-desc'>
-                            Ph.D. student, <br>
+                            Ph.D. student <br>
                             Master degree from DUT
                         </div>
                     </div>
@@ -1338,7 +1338,7 @@
                             Xiaoqi Qiu
                         </div>
                         <div class='paper-desc'>
-                            Ph.D. student, <br>
+                            Ph.D. student <br>
                             Master degree from SZU
                         </div>
                     </div>
@@ -1384,7 +1384,7 @@
                             Jiaxi Ren
                         </div>
                         <div class='paper-desc'>
-                            Master student, <br>
+                            Master student <br>
                             Bachelor degree from SUSTech
                         </div>
                     </div>
@@ -1399,7 +1399,7 @@
                             Xuhui Yi
                         </div>
                         <div class='paper-desc'>
-                            Master student, <br>
+                            Master student <br>
                             Bachelor degree from WUST
                         </div>
                     </div>
@@ -1409,7 +1409,7 @@
                             Haotian Zhang
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, <br>
+                            Research Intern <br>
                             Master student at DUT
                         </div>
                     </div>
@@ -1419,7 +1419,7 @@
                             Huajun Xi
                         </div>
                         <div class='paper-desc'>
-                            Research Assistant, <br>
+                            Research Assistant <br>
                             Bachelor degree from SUSTech
                         </div>
                     </div>
@@ -1459,7 +1459,7 @@
                             Wenbo Liao
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, <br>
+                            Research Intern <br>
                             PhD student at CUHK
                         </div>
                     </div>
@@ -1469,7 +1469,7 @@
                             Qingyang Hao
                         </div>
                         <div class='paper-desc'>
-                            Research Assistant, <br>
+                            Research Assistant <br>
                             Master degree from THU(SZ)
                         </div>
                     </div>
@@ -1479,7 +1479,7 @@
                             Yuhan Li
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, <br>
+                            Research Intern <br>
                             Undergraduate student at SDU(Weihai)
                         </div>
                     </div>
@@ -1494,7 +1494,7 @@
                             Zihao Shi
                         </div>
                         <div class='paper-desc'>
-                            Research Intern, <br>
+                            Research Intern <br>
                             Master student at FDU
                         </div>
                     </div>
@@ -1555,7 +1555,7 @@
                             Qiqi Tao
                         </div>
                         <div class='paper-desc'>
-                            Research Intern (2024), <br>
+                            Research Intern (2024) <br>
                             Now PhD student at SUTD, Singapore
                         </div>
                     </div>
@@ -1566,7 +1566,7 @@
                             Hongfu Gao
                         </div>
                         <div class='paper-desc'>
-                            Research Intern (2024), <br>
+                            Research Intern (2024) <br>
                             Now PhD student at NUS
                         </div>
                     </div>
@@ -1580,7 +1580,7 @@
                             Jianqing Song
                         </div>
                         <div class='paper-desc'>
-                            Research Intern (2024), <br>
+                            Research Intern (2024) <br>
                             PhD student at Nanjing University
                         </div>
                     </div>
