--- a/index.html
+++ b/index.html
@@ -395,19 +395,7 @@
                     ( <sup>*</sup> Corresponding author )
                 </div>
 
-                <div class='row vspace-top'>
-                    <div class="col">
-                        <div class='paper-title'>
-                            Your Pre-trained LLM is Secretly an Unsupervised Confidence Calibrator
-                        </div>
-                        <div class='paper-authors'>
-                            Beier Luo, Shuoyuan Wang, Yixuan Li, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2505.16690" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
+
 
                 <div class='row vspace-top'>
                     <div class="col">
@@ -454,19 +442,7 @@
 
 
 
-                <div class='row vspace-top'>
-                    <div class="col">
-                        <div class='paper-title'>
-                            Robust Online Conformal Prediction under Uniform Label Noise
-                        </div>
-                        <div class='paper-authors'>
-                            Huajun Xi, Kangdao Liu, Hao Zeng, Wenguang Sun, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2501.18363" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
+
 
 
                 <div class='row vspace-top'>
@@ -532,6 +508,40 @@
                         </div>
                     </div>
                 </div> -->
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Your Pre-trained LLM is Secretly an Unsupervised Confidence Calibrator
+                        </div>
+                        <div class='paper-desc'>
+                            NeurIPS 2025
+                        </div>
+                        <div class='paper-authors'>
+                            Beier Luo, Shuoyuan Wang, Yixuan Li, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2505.16690" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Exploring the Noise Robustness of Online Conformal Prediction
+                        </div>
+                        <div class='paper-desc'>
+                            NeurIPS 2025
+                        </div>
+                        <div class='paper-authors'>
+                            Huajun Xi, Kangdao Liu, Hao Zeng, Wenguang Sun, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2501.18363" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
