--- a/index.html
+++ b/index.html
@@ -464,23 +464,6 @@
                 </div>
 
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            TorchCP: A Library for Conformal Prediction based on PyTorch
-                        </div>
-                        <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Jianguo Huang
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2402.12683" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
 
 
@@ -508,6 +491,25 @@
                         </div>
                     </div>
                 </div> -->
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            TorchCP: A Python Library for Conformal Prediction
+                        </div>
+                        <div class='paper-authors'>
+                            Jianguo Huang, Jianqing Song, Xuanning Zhou, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2402.12683" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
 
                 <div class='row vspace-top'>
                     <div class="col">
