--- a/index.html
+++ b/index.html
@@ -504,6 +504,9 @@
                         <div class='paper-authors'>
                             Jianguo Huang, Jianqing Song, Xuanning Zhou, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
                         </div>
+                        <div class='paper-desc'>
+                            JMLR
+                        </div>
                         <div>
                             <a href="https://arxiv.org/abs/2402.12683" target="_blank">[Paper]</a>
                         </div>
