--- a/index.html
+++ b/index.html
@@ -395,7 +395,89 @@
                     ( <sup>*</sup> Corresponding author )
                 </div>
 
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Selective Labeling with False Discovery Rate Control
+                        </div>
+                        <div class='paper-authors'>
+                            Huipeng Huang, Wenbo Liao, Huajun Xi, Hao Zeng, Mengchen Zhao, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2510.14581" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
 
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            High-Power Training Data Identification with Provable Statistical Guarantees
+                        </div>
+                        <div class='paper-authors'>
+                            Zhenlong Liu, Hao Zeng, Weiran Huang, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2510.09717" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            PAC Reasoning: Controlling the Performance Loss for Efficient Reasoning
+                        </div>
+                        <div class='paper-authors'>
+                            Hao Zeng, Jianguo Huang, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>, Bo An
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2510.09133" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Multi-Condition Conformal Selection
+                        </div>
+                        <div class='paper-authors'>
+                            Qingyang Hao, Wenbo Liao, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2510.08075" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Detecting Distillation Data from Reasoning Models
+                        </div>
+                        <div class='paper-authors'>
+                            Hengxiang Zhang, Hyeong Kyu Choi, Yixuan Li, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2510.04850" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Online conformal selection with accept-to-reject changes
+                        </div>
+                        <div class='paper-authors'>
+                            Kangdao Liu, Huajun Xi, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2508.13838" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class='row vspace-top'>
                     <div class="col">
