--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
                         September 2025
                     </div>
                     <div class="col">
+                        We will host NeurIPS 2025 Seminar @ Shenzhen during Nov 20-22, <a href="https://v.wjx.cn/vm/eV6tlf1.aspx#" target="_blank">Click here to sign up</a>.
+                    </div>
+                </div>
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        September 2025
+                    </div>
+                    <div class="col">
                         I will be serving as a Area Chair for ICLR 2026.
                     </div>
                 </div>
