--- a/index.html
+++ b/index.html
@@ -454,19 +454,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <div class="col">
-                        <div class='paper-title'>
-                            Multi-Condition Conformal Selection
-                        </div>
-                        <div class='paper-authors'>
-                            Qingyang Hao, Wenbo Liao, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2510.08075" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
+
 
                 <div class='row vspace-top'>
                     <div class="col">
@@ -482,19 +470,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <div class="col">
-                        <div class='paper-title'>
-                            Online conformal selection with accept-to-reject changes
-                        </div>
-                        <div class='paper-authors'>
-                            Kangdao Liu, Huajun Xi, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/abs/2508.13838" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
+
 
                 <div class='row vspace-top'>
                     <div class="col">
@@ -539,11 +515,6 @@
                 </div>
 
 
-
-
-
-
-
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
                         <img src='imgs/star_img.png' class='img-fluid'>
@@ -565,8 +536,6 @@
 
 
 
-
-
                 <div class='vspace-top'>
                     <h1>Selected Publications</h1>
                     <!-- (* Corresponding author; &#8224 Equal contribution) -->
@@ -576,20 +545,41 @@
                 <div id='header-text-remark'>
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
                 </div>
-<!-- 
+
                 <div class='row vspace-top'>
                     <div class="col">
                         <div class='paper-title'>
-                            C-Adapter: Adapting Deep Classifiers for Efficient Conformal Prediction Sets
+                            Multi-Condition Conformal Selection
+                        </div>
+                        <div class='paper-desc'>
+                            ICLR 2026
                         </div>
                         <div class='paper-authors'>
-                            Kangdao Liu, Hao Zeng, Jianguo Huang, Huiping Zhuang, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
+                            Qingyang Hao, Wenbo Liao, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
                         </div>
                         <div>
-                            <a href="https://arxiv.org/abs/2410.09408" target="_blank">[Paper]</a>
+                            <a href="https://arxiv.org/abs/2510.08075" target="_blank">[Paper]</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Online conformal selection with accept-to-reject changes
+                        </div>
+                        <div class='paper-desc'>
+                            AAAI 2026
+                        </div>
+                        <div class='paper-authors'>
+                            Kangdao Liu, Huajun Xi, Chi-Man Vong, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2508.13838" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
