--- a/index.html
+++ b/index.html
@@ -415,6 +415,93 @@
                 <div class='row vspace-top'>
                     <div class="col">
                         <div class='paper-title'>
+                            Natural Language-Driven Global Mapping of Martian Landforms
+                        </div>
+                        <div class='paper-authors'>
+                            Yiran Wang, Shuoyuan Wang, Zhaoran Wei, Jiannan Zhao, Zhonghua Yao, Zejian Xie, Songxin Zhang, Jun Huang, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2601.15949" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Conditional Performance Guarantee for Large Reasoning Models
+                        </div>
+                        <div class='paper-authors'>
+                            Jianguo Huang, Hao Zeng, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>, Bo An
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2601.22790" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Distribution-informed Efficient Conformal Prediction for Full Ranking
+                        </div>
+                        <div class='paper-authors'>
+                            Wenbo Liao, Huipeng Huang, Chen Jia, Huajun Xi, Hao Zeng, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2601.23128" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Provable Model Provenance Set for Large Language Models
+                        </div>
+                        <div class='paper-authors'>
+                            Xiaoqi Qiu, Hao Zeng, Zhiyu Hou, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2602.00772" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            ST-BCP: Tightening Coverage Bound for Backward Conformal Prediction via Non-Conformity Score Transformation
+                        </div>
+                        <div class='paper-authors'>
+                            Junxian Liu, Hao Zeng, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2602.01733" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            HyPAC: Cost-Efficient LLMs-Human Hybrid Annotation with PAC Error Guarantees
+                        </div>
+                        <div class='paper-authors'>
+                            Hao Zeng, Huipeng Huang, Xinhao Qu, Jianguo Huang, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/abs/2602.02550" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
                             Selective Labeling with False Discovery Rate Control
                         </div>
                         <div class='paper-authors'>
